Fix fof bug 15674 - Putting back char* buffer.

r=akkana